--- a/src/universe/autoware.universe/localization/ndt_scan_matcher/config/ndt_scan_matcher.param.yaml
+++ b/src/universe/autoware.universe/localization/ndt_scan_matcher/config/ndt_scan_matcher.param.yaml
@@ -43,6 +43,10 @@
     # Tolerance of distance difference between two initial poses used for linear interpolation. [m]
     initial_pose_distance_tolerance_m: 10.0
 
+    # neighborhood search method
+    # 0=KDTREE, 1=DIRECT26, 2=DIRECT7, 3=DIRECT1
+    neighborhood_search_method: 0
+
     # Number of threads used for parallel computing
     num_threads: 4
 
@@ -61,7 +65,7 @@
     # Regularization switch
     regularization_enabled: false
 
-    # regularization scale factor
+    # Regularization scale factor
     regularization_scale_factor: 0.01
 
     # Dynamic map loading distance
@@ -73,7 +77,6 @@
     # Radius of input LiDAR range (used for diagnostics of dynamic map loading)
     lidar_radius: 100.0
 
-    # cspell: ignore degrounded
     # A flag for using scan matching score based on de-grounded LiDAR scan
     estimate_scores_for_degrounded_scan: false
 
